# collectives

./: demo_main.py  pyproject.toml
collectives/: __init__.py  algorithms.py  api.py  datatypes.py  helpers.py  shardbuffer.py
tests/: test_algorithms.py
