[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collectives"
version = "0.1.0"
description = "A simple project for device and shard simulation algorithms."
authors = [
  { name = "Sidharth Baskaran", email = "sidnbaskaran@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
  "numpy"
]

[tool.setuptools]
packages = ["collectives"]
